Update GET api/posts/ with query params (orderBy, category)
